# JARVIS-0.0.1

./: .env.example  README.md  background_agents.py  config.py  gesture_controller.py  main.py  output.txt  pyproject.toml  requirements.txt  ui_overlay.py
actions/: executor.py  mcp_clients.py  mcp_registry.py  vision.py
brain/: llm.py  planner.py  router.py
memory/: store.py
orchestrator/: executor.py  graph.py
tests/: test_action_safety.py  test_config.py  test_feature_scaffolds.py  test_llm_routing.py  test_router.py
voice/: stt.py  tts.py  wake_word.py
